# blank-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: keep-alive.yml
.streamlit/: config.toml  secrets.toml.example
app_components/: __init__.py  aoi_component.py  auth_component.py  theme_utils.py  time_series.py  visitor_stats.py
core/: __init__.py  download_utils.py  image_processing.py  map_utils.py  satellite_data.py  vegetation_indices.py
