[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agrivision-pro"
version = "2.0.0"
description = "Multi-sensor vegetation index analysis using Google Earth Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aashish Gautam", email = "aashishgautam533@gmail.com"}
]
keywords = ["earth-engine", "vegetation", "remote-sensing", "streamlit", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "streamlit>=1.32.0",
    "geemap>=0.30.0",
    "earthengine-api>=0.1.380",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/aashish66/AgriVision_Pro_Version1"
Repository = "https://github.com/aashish66/AgriVision_Pro_Version1"

[tool.setuptools]
packages = []
